# mirae-automation

./: .gitignore  README.md  check_models.py  process_pdfs.py  pyproject.toml  simple_download.py  test_intergration.py
src/: config.py  models.py
src/services/: ai_engine.py  dnse_service.py  market_logic.py  rag_service.py
src/ui/: dashboard.py
