[project]
name = "mirae-automation"
version = "0.1.0"
description = "Daily market report automation app for Mirae Asset"
authors = [
    {name = "NDPhuu",email = "ducphu.tc10@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "vnstock (>=3.3.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "paho-mqtt (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
